Fix top spacing on sign up page

--- a/src/scss/pages/_register.scss
+++ b/src/scss/pages/_register.scss
@@ -162,6 +162,11 @@
   .register-bottom-container{
     margin-top: 30px;
   }
+
+  .register-container-main-area{
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 .login-redirect{
